[package]
name = "arcache"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Thread safe cache implementations with a shared trait to make caches interchangeable."
homepage = "https://github.com/OwenPendrighElliott/arcache"
repository = "https://github.com/OwenPendrighElliott/arcache"
readme = "README.md"
keywords = ["caching", "cache"]
categories = ["caching", "data-structures", "algorithms"]

[dependencies]
linked-hash-map = "0.5"
linked_hash_set = "0.1"
rand = "0.9"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "lru_bench"
harness = false

[[bench]]
name = "generic_bench"
harness = false